--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
 <body class="manropefont ">
     <!-- header part start here  -->
-    <header>
+    <header class="container mx-auto">
         <!-- navbar start here  -->
         <nav>
-            <div class="navbar text-black bg-gray-200">
+            <div class="navbar text-black bg-gray-200 rounded-2xl">
                 <div class="flex-1">
                     <a class="btn btn-ghost text-2xl font-bold">Tea House</a>
                 </div>
@@ -92,6 +92,25 @@
                 </div>
             </div>
         </nav>
+
+        <!-- hero start here  -->
+
+        <div class="hero  text-black mt-10">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+                <img src="images/banner.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <div>
+                    <h1 class="text-7xl font-extrabold manropefont">
+                        It's good
+                        <br>
+                        tea time at The
+                        <br>
+                        Tea House
+                    </h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                    <button class="btn btn-primary">Get Started</button>
+                </div>
+            </div>
+        </div>
     </header>
 
 
@@ -101,7 +120,7 @@
     <main>
 
     </main>
-    <footer>
+    <footer class="container mx-auto">
 
     </footer>
 
