--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
                 <div>
                     <img src="images/banner.png" class="max-w-sm rounded-xl " />
-                    <div class="flex items-center gap-4 shadow-lg">
-                        <i class="fa-solid fa-star text-yellow-500 text-3xl "></i>
+                    <div class="-mt-20 bg-white flex justify-center items-center gap-4 drop-shadow-lg rounded-xl p-5 w-60 ">
+                        <i class="fa-solid fa-star text-amber-500 text-3xl "></i>
                         <div>
                             <h3 class="text-2xl font-bold ">5.00</h3>
                             <p>Trust Pilot Ratings</p>
