--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </header>
 
 
-
+<!-- <script src="https://kit.fontawesome.com/52a5252143.js" crossorigin="anonymous"></script>  -->
 
 
     <main>
