--- a/index.html
+++ b/index.html
@@ -191,25 +191,34 @@
 
 
         <!-- great tea section  -->
-        <section class="mx-24 container">
-            <div class="grid">
-
+        <section class=" container mx-auto flex flex-col flex-row">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 border">
+                <div class=""></div>
+                <div class="row-span-2">
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="row-span-2">
+                    <img src="images/fresh-2.png" alt="">
+                </div>
+                <div></div>
             </div>
 
-            <div class="space-y-5">
+            <div class="space-y-4">
                 <h3 class="text-5xl font-extrabold">Great Tea, <br>
                     Freshly Presented</h3>
-                <p class="">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the
-                highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers because
-                of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <p class="">The meaning of gong cha is chanese is to provide the best tea to emperor from all
+                    possessions . It represents the
+                    highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by
+                    its custoers because
+                    of good words of mouth and unique customized service orginated from Taiwan.</p>
                 <h4 class="text-xl font-extrabold">Unique Test</h4>
                 <p>
                     A Unique and different style from other teapots gives a luxurious and minimalist impression
                 </p>
-                
+
                 <h4 class="text-xl font-extrabold ">Premium Quality</h4>
                 <p>
-                Premium Quality that makes tea more elegant and more durable when you use it.
+                    Premium Quality that makes tea more elegant and more durable when you use it.
                 </p>
             </div>
         </section>
