--- a/index.html
+++ b/index.html
@@ -191,19 +191,19 @@
 
 
         <!-- great tea section  -->
-        <section class=" container mx-auto flex flex-col flex-row">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 border">
-                <div class=""></div>
-                <div class="row-span-2">
+        <section class=" container mx-auto flex flex-col lg:flex-row ">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 flex-1">
+                <div class="rounded-xl row-span-1 "></div>
+                <div class="row-span-2 rounded-xl">
                     <img src="images/fresh-1.png" alt="">
                 </div>
-                <div class="row-span-2">
+                <div class="row-span-2 rounded-xl">
                     <img src="images/fresh-2.png" alt="">
                 </div>
-                <div></div>
+                <div class="rounded-xl"></div>
             </div>
 
-            <div class="space-y-4">
+            <div class="space-y-4 flex-1">
                 <h3 class="text-5xl font-extrabold">Great Tea, <br>
                     Freshly Presented</h3>
                 <p class="">The meaning of gong cha is chanese is to provide the best tea to emperor from all
