--- a/index.html
+++ b/index.html
@@ -192,15 +192,20 @@
 
         <!-- great tea section  -->
         <section class=" container mx-auto flex flex-col lg:flex-row ">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 flex-1">
-                <div class="rounded-xl row-span-1 "></div>
-                <div class="row-span-2 rounded-xl">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 flex-1 ">
+
+                <div class="rounded-xl row-span-1 bg-gradient-to-r from-[#ff6b6b7e] to-[#fab282] h-36 w-56"></div>
+
+                <div class="row-span-2 rounded-xl w-56 bg-[#E6A6231A] flex  p-10" >
                     <img src="images/fresh-1.png" alt="">
                 </div>
-                <div class="row-span-2 rounded-xl">
+
+                <div class="row-span-2 rounded-xl w-56 bg-[#5776391A] flex  p-10">
                     <img src="images/fresh-2.png" alt="">
                 </div>
-                <div class="rounded-xl"></div>
+
+                <div class="rounded-xl row-span-1 bg-gradient-to-r from-[#D9D9D9] to-[#e0dddd] h-36 w-56"></div>
+
             </div>
 
             <div class="space-y-4 flex-1">
