great tea section

--- a/index.html
+++ b/index.html
@@ -191,24 +191,24 @@
 
 
         <!-- great tea section  -->
-        <section class=" container mx-auto flex flex-col lg:flex-row ">
+        <section class="my-24 flex flex-col lg:flex-row gap-12 mx-8">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 flex-1 ">
 
-                <div class="rounded-xl row-span-1 bg-gradient-to-r from-[#ff6b6b7e] to-[#fab282] h-36 w-56"></div>
+                <div class="rounded-xl bg-gradient-to-r from-[#ff6b6b7e] to-[#fab282] h-36"></div>
 
-                <div class="row-span-2 rounded-xl w-56 bg-[#E6A6231A] flex  p-10" >
+                <div class="row-span-2 rounded-xl bg-[#E6A6231A] flex justify-center items-center p-10" >
                     <img src="images/fresh-1.png" alt="">
                 </div>
 
-                <div class="row-span-2 rounded-xl w-56 bg-[#5776391A] flex  p-10">
+                <div class="row-span-2 rounded-xl  bg-[#5776391A] flex justify-center items-center p-10">
                     <img src="images/fresh-2.png" alt="">
                 </div>
 
-                <div class="rounded-xl row-span-1 bg-gradient-to-r from-[#D9D9D9] to-[#e0dddd] h-36 w-56"></div>
+                <div class="rounded-xl bg-gradient-to-r from-[#D9D9D9] to-[#f5f1f1] h-36 "></div>
 
             </div>
 
-            <div class="space-y-4 flex-1">
+            <div class="space-y-4 flex-1 ">
                 <h3 class="text-5xl font-extrabold">Great Tea, <br>
                     Freshly Presented</h3>
                 <p class="">The meaning of gong cha is chanese is to provide the best tea to emperor from all
