--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
                 <div class="rounded-xl bg-gradient-to-r from-[#ff6b6b7e] to-[#fab282] h-36"></div>
 
-                <div class="row-span-2 rounded-xl bg-[#E6A6231A] flex justify-center items-center p-10" >
+                <div class="row-span-2 rounded-xl bg-[#E6A6231A] flex justify-center items-center p-10">
                     <img src="images/fresh-1.png" alt="">
                 </div>
 
@@ -225,6 +225,31 @@
                 <p>
                     Premium Quality that makes tea more elegant and more durable when you use it.
                 </p>
+            </div>
+        </section>
+
+        <!-- Super clients section  -->
+        <section
+            class="my-24 mx-8 bg-gradient-to-r from-[#FF0000] to-[#FF8938] rounded-2xl  py-24 px-16 flex flex-col lg:flex-row gap-12 justify-center items-center">
+            <!-- super left  -->
+            <div class="text-white">
+                <h2 class="text-5xl font-extrabold mb-5 ">Meet Our Super <br> Clients</h2>
+                <p class="mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form,
+                    by injected humour, or randomised words which don't look even slightly believable.</p>
+                <button class="btn w-36 glass bg-white text-red-600 font-extrabold ">Show All</button>
+            </div>
+
+            <!-- review -->
+            <div class="p-10 rounded-lg bg-white ">
+                <img class="-ml-14 -mt-14 border-gray-50 " src="images/client.png" alt="">
+                <p class="pb-6">We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <h4 class="font-bold">Ilham Yuda</h4>
+                <div class="flex justify-between">
+                    <h4 class="font-medium">Businessman</h4>
+                    <img class="" src="images/circles.png" alt="">
+                </div>
             </div>
         </section>
     </main>
