--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 
     <main class="container mx-auto text-black">
-        <!-- Featured section -->
+        <!-- Featured Product section -->
         <section class="text-center my-24 ">
             <h2 class="text-5xl font-extrabold mb-5 ">Our Featured Products</h2>
             <p class="lg:max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but
@@ -230,25 +230,105 @@
 
         <!-- Super clients section  -->
         <section
-            class="my-24 mx-8 bg-gradient-to-r from-[#FF0000] to-[#FF8938] rounded-2xl  py-24 px-16 flex flex-col lg:flex-row gap-12 justify-center items-center">
+            class="my-24 mx-8 bg-gradient-to-r from-[#FF0000] to-[#FF8938] rounded-2xl  py-24 px-16 flex flex-col lg:flex-row gap-12 justify-center items-center ">
             <!-- super left  -->
-            <div class="text-white">
+            <div class="text-white flex-1 float-start pr-20">
                 <h2 class="text-5xl font-extrabold mb-5 ">Meet Our Super <br> Clients</h2>
-                <p class="mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <p class="mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered
                     alteration in some form,
                     by injected humour, or randomised words which don't look even slightly believable.</p>
                 <button class="btn w-36 glass bg-white text-red-600 font-extrabold ">Show All</button>
             </div>
+            <!-- review container  -->
+            <div class="relative float-end">
+                <!-- Next review -->
+                <div class="mb-16 relative p-10 rounded-lg bg-white opacity-40 lg:w-[400px]">
+                    <img class="-ml-14 -mt-14 border-4 border-white bg-white rounded-full " src="images/client.png"
+                        alt="">
+                    <p class="pb-6">We are providing the best and suitable home insurance services for the people who
+                        are interested to
+                        treatment</p>
+                    <h4 class="font-bold">Ilham Yuda</h4>
+                    <div class="flex justify-between">
+                        <h4 class="font-medium">Businessman</h4>
+                        <img class="" src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- Current review 2-->
+                <div class="p-10 rounded-lg bg-white absolute z-10 top-40 lg:-left-32  lg:w-[400px]">
+                    <img class="-ml-14 -mt-14 border-4 border-white bg-white rounded-full " src="images/client.png"
+                        alt="">
+                    <p class="pb-6">We are providing the best and suitable home insurance services for the people who
+                        are interested to
+                        treatment</p>
+                    <h4 class="font-bold">Ilham Yuda</h4>
+                    <div class="flex justify-between">
+                        <h4 class="font-medium">Businessman</h4>
+                        <img class="" src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!--Previous review 3-->
+                <div class="relative p-10 rounded-lg bg-white opacity-40 lg:w-[400px]">
+                    <img class="-ml-14 -mt-14 border-4 border-white bg-white rounded-full " src="images/client.png"
+                        alt="">
+                    <p class="pb-6">We are providing the best and suitable home insurance services for the people who
+                        are interested to
+                        treatment</p>
+                    <h4 class="font-bold">Ilham Yuda</h4>
+                    <div class="flex justify-between">
+                        <h4 class="font-medium">Businessman</h4>
+                        <img class="" src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
 
-            <!-- review -->
-            <div class="p-10 rounded-lg bg-white ">
-                <img class="-ml-14 -mt-14 border-gray-50 " src="images/client.png" alt="">
-                <p class="pb-6">We are providing the best and suitable home insurance services for the people who are interested to
-                    treatment</p>
-                <h4 class="font-bold">Ilham Yuda</h4>
-                <div class="flex justify-between">
-                    <h4 class="font-medium">Businessman</h4>
-                    <img class="" src="images/circles.png" alt="">
+
+        </section>
+
+        <!-- News & Event Section  -->
+        <section class="text-center my-24 ">
+            <h2 class="text-5xl font-extrabold mb-5 ">News & Events</h2>
+            <p class="lg:max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form,
+                by injected humour, or randomised words which don't look even slightly believable.</p>
+            <!-- card container  -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- card 1 -->
+                <div class="card p-5 shadow-xl">
+                    <figure><img src="images/news-1.png" alt="Shoes" /></figure>
+                    <div class="text-start">
+                        <p class="py-3">Feb 05, 2027</p>
+                        <h2 class="font-bold text-xl">Collecting 8 points for discount</h2>
+                        <p class="py-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions justify-start">
+                            <button class="btn glass text-black">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="card p-5 shadow-xl">
+                    <figure><img src="images/news-2.png" alt="Shoes" /></figure>
+                    <div class="text-start">
+                        <p class="py-3">Feb 05, 2027</p>
+                        <h2 class="font-bold text-xl">Collecting 8 points for discount</h2>
+                        <p class="py-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions justify-start">
+                            <button class="btn glass text-black">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="card p-5 shadow-xl">
+                    <figure><img src="images/news-3.png" alt="Shoes" /></figure>
+                    <div class="text-start">
+                        <p class="py-3">Feb 05, 2027</p>
+                        <h2 class="font-bold text-xl">Collecting 8 points for discount</h2>
+                        <p class="py-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions justify-start">
+                            <button class="btn glass text-black">Learn More</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -257,10 +337,54 @@
 
 
 
+    <footer class=" lg:px-48 py-10 bg-gray-200 text-base-content text-black">
 
+        <div class=" flex justify-between my-24">
+            <img src="images/cup.png" alt="">
+            <p>
+                <Span>Ready to get started</Span>
+                <button class="btn btn-error">Get Started</button>
+            </p>
 
-    <footer class="container mx-auto ">
-
+        </div>
+        <div class="footer">
+            <nav>
+                <h6 class="footer-title">Services</h6>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Company</h6>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Legal</h6>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <h6 class="footer-title">Newsletter</h6>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="username@site.com"
+                            class="input input-bordered join-item bg-white text-black" />
+                        <button class="btn btn-primary join-item">Subscribe</button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="mt-4 text-center p-4 text-gray">
+            <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </div>
     </footer>
 
 </body>
