--- a/index.html
+++ b/index.html
@@ -106,10 +106,9 @@
         </nav>
 
         <!-- hero start here  -->
-        <banner class="hero  text-black mt-10">
-            <div class="hero-content flex-col lg:flex-row">
-
-                <div>
+        <banner class="  text-black my-20">
+            <div class="flex justify-between flex-col lg:flex-row">
+                <div class="my-32">
                     <h1 class="text-7xl font-extrabold manropefont">
                         It's good
                         <br>
@@ -126,7 +125,7 @@
                 </div>
 
                 <div>
-                    <img src="images/banner.png" class="max-w-sm rounded-xl " />
+                    <img src="images/banner.png" class=" rounded-xl " />
                     <div
                         class="-mt-20 bg-white flex justify-center items-center gap-4 drop-shadow-lg rounded-xl p-5 w-60 ">
                         <i class="fa-solid fa-star text-amber-500 text-3xl "></i>
