--- a/index.html
+++ b/index.html
@@ -370,13 +370,13 @@
                 <a class="link link-hover">Privacy policy</a>
                 <a class="link link-hover">Cookie policy</a>
             </nav>
-            <form class="flex flex-col mb-4 mx-auto">
+            <form class="flex flex-col mb-4 justify-center items-center">
                 <h6 class="text-2xl font-bold">Newsletter</h6>
                 <fieldset class="form-control w-80">
-                    <label class="label">
+                    <label class="text-center">
                         <span class="label-text">Enter your email address</span>
                     </label>
-                    <div class="join">
+                    <div class="text-center">
                         <input type="text" placeholder="Email address "
                             class="py-2 border-b-2 border-black outline-none join-item bg-transparent  text-black" />
                         <button class="btn btn-primary linercolor text-white rounded-full"><span
@@ -385,7 +385,7 @@
                             </span></button>
                     </div>
                     <div class="mt-5">
-                        <div class="flex  ">
+                        <div class="flex justify-center ">
                             <a class="font-bold text-3xl " href=""><i class="fa-brands fa-facebook"></i></a>
                             <a class="font-bold text-3xl mx-3" href=""><i class="fa-brands fa-youtube"></i></a>
                             <a class="font-bold text-3xl " href=""><i class="fa-brands fa-instagram"></i></a>
