--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             </p>
 
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-30">
+        <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-30">
             <nav class="flex flex-col mb-4 mx-auto">
                 <h6 class="text-2xl font-bold">Services</h6>
                 <a class="link link-hover">Branding</a>
@@ -379,7 +379,7 @@
                     <div class="text-center">
                         <input type="text" placeholder="Email address "
                             class="py-2 border-b-2 border-black outline-none join-item bg-transparent  text-black" />
-                        <button class="btn btn-primary linercolor text-white rounded-full"><span
+                        <button class="btn linercolor text-white rounded-full"><span
                                 class="material-symbols-outlined">
                                 chevron_right
                             </span></button>
