--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body class="manropefont ">
     <!-- header part start here  -->
-    <header class="container mx-auto">
+    <header class="container mx-auto ">
         <!-- navbar start here  -->
         <nav class="mt-5">
             <div class="navbar text-black bg-gray-200 rounded-2xl">
@@ -106,8 +106,9 @@
         </nav>
 
         <!-- hero start here  -->
-        <banner class="  text-black my-20">
-            <div class="flex justify-between flex-col lg:flex-row">
+        <banner class=" text-black my-20 ">
+            <div class="flex justify-between items-center flex-col lg:flex-row bg-gradient-to-r from-[#ff00003f] to-[#ff883827] p-20 rounded-xl">
+                <!-- left section -->
                 <div class="my-32">
                     <h1 class="text-7xl font-extrabold manropefont">
                         It's good
@@ -339,7 +340,7 @@
 
 
 
-    <footer class="container mx-auto lg:px-48 py-10 bg-gray-200 text-black">
+    <footer class="container mx-auto px-20 lg:px-48 py-10 bg-gradient-to-r from-[#ff00003f] to-[#ff883827] text-black">
 
         <div class=" flex justify-between my-24">
             <img src="images/cup.png" alt="">
